--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=update 
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/docket
 spring.datasource.username=root
-spring.datasource.password=serafim26.
+spring.datasource.password=MySql2019!
